some make tweaks for error conditions
properly do C++ compiling support for mpich

--- a/cbench/opensource/stress/Makefile
+++ b/cbench/opensource/stress/Makefile
@@ -13,7 +13,7 @@ $(EXEC): $(SRC) .patched
 	$(MAKE) -C $(SRC)
 
 clean: 
-	$(MAKE) -C $(SRC) clean
+	-$(MAKE) -C $(SRC) clean
 
 distclean:
 	/bin/rm -rf $(SRC) .patched src
