--- a/cbench/opensource/mpich/Makefile
+++ b/cbench/opensource/mpich/Makefile
@@ -12,7 +12,7 @@ default: .make-$(MPICH)
 
 .configure-$(MPICH): $(MPICH)
 	(cd $(MPICH); export CC=$(PLAINCC); export F77=$(PLAINF77); \
-	 export FC=$(PLAINF77); \
+	 export FC=$(PLAINF77); export CXX=$(PLAINCXX); \
 	 export CFLAGS='-O1'; export LDFLAGS='-lpthread'; \
 	 ./configure --enable-f77 --with-device=$(CH) --without-romio \
 	 --enable-cxx --enable-shared --prefix=$(BENCH_HOME)/opensource/mpich)
@@ -40,7 +40,9 @@ install:
 	rm -rf $(CBENCHTEST)/mpich/doc $(CBENCHTEST)/mpich/share $(CBENCHTEST)/mpich/etc $(CBENCHTEST)/mpich/examples $(CBENCHTEST)/mpich/man $(CBENCHTEST)/mpich/www
 
 clean:
+	-$(MAKE) -C $(MPICH) distclean
 	rm -f .make-$(MPICH) .configure-$(MPICH)
-	rm -rf $(MPICH)
 	rm -rf bin etc include sbin www doc examples lib man share
 
+distclean: clean
+	rm -rf $(MPICH)
