slight distclean/clean tweaks

--- a/cbench/opensource/ctcs/Makefile
+++ b/cbench/opensource/ctcs/Makefile
@@ -8,7 +8,7 @@ default: all
 all:
 	$(MAKE) -C src CC=$(PLAINCC) CLINKER='$(PLAINCC) $(LDFLAGS)' CFLAGS='$(CFLAGS)' MEMTST_CFLAGS='$(CFLAGS) $(NOUNROLL_FLAGS)' $@
 
-clean:
+distclean clean:
 	$(MAKE) -C src dist-clean
 
 install uninstall:
