slight tweak for cleaning

--- a/openapps/lammps/Makefile
+++ b/openapps/lammps/Makefile
@@ -32,9 +32,9 @@ $(TAR):
 	-[ -e $(TAR) ] && touch $(TAR)
 
 clean:
-	make -C $(SRC)/lib/poems -f Makefile.cbench clean
-	make -C $(SRC)/lib/meam -f Makefile.cbench clean
-	make -C $(SRC)/src clean-all
+	-make -C $(SRC)/lib/poems -f Makefile.cbench clean
+	-make -C $(SRC)/lib/meam -f Makefile.cbench clean
+	-make -C $(SRC)/src clean-all
 
 distclean:
 	/bin/rm -rf $(TAR) $(SRC) src
