LLNL IRS application from the Sequoia benchmarks (https://asc.llnl.gov/sequoia/benchmarks/irs_v1.0.tar.gz)
compiles for Intel 10 right now w/o the OPENMP2
support in IRS enabled

--- a/openapps/amg/Makefile
+++ b/openapps/amg/Makefile
@@ -1,7 +1,5 @@
 include $(CBENCHOME)/make.def
 
-export CFLAGS
-
 SRC=AMG2006
 TAR=AMG2006_v1.0.tar.gz
 URL=https://asc.llnl.gov/sequoia/benchmarks/$(TAR)
@@ -15,7 +13,7 @@ all: $(SRC)
 	make CC=$(CC) -C $(SRC) veryclean
 	$(MAKE) CC=$(CC) -C $(SRC)
 
-$(SRC): $(TAR)
+$(SRC) src: $(TAR)
 	[ ! -d $(SRC) ] && tar zxf $(TAR)
 	ln -sf $(SRC) src
 	cd $(SRC); /bin/rm -f Makefile.include
