--- a/cbench/templates/amg_amg.in
+++ b/cbench/templates/amg_amg.in
@@ -29,5 +29,5 @@ cbench_echo "=========== solver 4 ============="
 cbench_echo ""
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/amg2006 -P $PX $PY $PZ -r 17 17 17 -printstats -solver 4"
 cbench_run_cmd $CMD
-mv psums psums.prep
+timestamp=`date --iso-8601=seconds`
 cbench_echo "Cbench amg solver4 timestamp: $timestamp"
