--- a/cbench/templates/lammps_eam.in
+++ b/cbench/templates/lammps_eam.in
@@ -1,9 +1,9 @@
-# lammps_lj job template
-# Uses LAMMPS benchmark code LJ
+# lammps_eam job template
+# Uses LAMMPS benchmark code EAM
 # NOTE: bash syntax is used here
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/lmp_cbench"
-STDIN_FILE="$CBENCHTEST/lammps/bench/in.lj"
+STDIN_FILE="$CBENCHTEST/lammps/bench/in.eam"
 
 cbench_run_cmd $CMD
 
