Remove the -mtune for this program; the g77 compiler doesn't like it
It should be noted that sweep3d seems to require GNU compilers

--- a/openapps/sweep3d/Makefile
+++ b/openapps/sweep3d/Makefile
@@ -8,6 +8,7 @@ URL=http://www.ccs3.lanl.gov/pal/software/sweep3d/$(TAR)
 EXECS = $(SRC)/sweep
 INSTALLDIR = $(bin_dir)
 INSTALLTARGETS = $(EXECS)
+FFLAGS = -fno-second-underscore -O3
 
 all: $(SRC) src/Makefile
 	make -C $(SRC)
