Uses F90 instead of F77 to correct Fortran gcc build problem, and corrects cpp issue with PGI.
Sweep3d now builds with PGI, Intel, and GCC

--- a/openapps/sweep3d/Makefile
+++ b/openapps/sweep3d/Makefile
@@ -8,13 +8,13 @@ URL=http://www.ccs3.lanl.gov/pal/software/sweep3d/$(TAR)
 EXECS = $(SRC)/sweep
 INSTALLDIR = $(bin_dir)
 INSTALLTARGETS = $(EXECS)
-FFLAGS = -fno-second-underscore -O3
+
 
 all: $(SRC) src/Makefile
 	make -C $(SRC)
 
 src/Makefile:
-	cd src && ./configure --with-mpi F77=$(F77) CC=$(CC) FFLAGS="$(FFLAGS)" CFLAGS="$(CFLAGS)"
+	cd src && ./configure --with-mpi F77=$(F90) CC=$(CC) CPP="cpp" FFLAGS="$(FFLAGS)" CFLAGS="$(CFLAGS)"
 
 $(SRC) src: $(TAR)
 	[ ! -d $(SRC) ] && tar zxf $(TAR)
