working now on the new SF

--- a/trac/sf/trac.ini
+++ b/trac/sf/trac.ini
@@ -80,7 +80,7 @@ password_format = htpasswd
 password_file = /home/cbench/htpasswd.requests
 
 [components]
-webadmin.* = enabled
+tractoc.* = enabled
 
 [graphviz]
 cache_dir = /home/groups/c/cb/cbench/persistent/TRAC/htdocs/graphviz
