IO testset:  - remove the Nto1 test case as a default job  - update NtoN test case params to mirror SWL setup which    randy likes
IOSANITY testset:
 - update params to mirror changes from IO NtoN case except
   for data scale

--- a/cbench/templates/iosanity_ior1mNto1.in
+++ b/cbench/templates/iosanity_ior1mNto1.in
@@ -6,7 +6,7 @@
 # we are setting the -b parameter small to not stress the data
 # moving side of the equation, but the file create, delete, open,
 # etc. side of it, i.e. the sanity of the filesystem
-ALLARGS="-b 1m -C -i 2 -r -R -t 1m -v -w -W -e -d 30"
+ALLARGS="-b 2m -C -i 4 -t 1m -v -v -r -R -w -W -e -d 30 -g "
 TESTDIR="TESTDIR_HERE/$JOBID"
 mkdir -p $TESTDIR
 PSFILE=`/bin/mktemp $TESTDIR/posix.nto1.XXXXXX`
