--- a/templates/iosanity_ior1mNtoN.in
+++ b/templates/iosanity_ior1mNtoN.in
@@ -1,5 +1,6 @@
-# iosanity_ior job template
-# IOR MPI filesystem test using posix, 1 MB chunks
+# iosanity_ior1mNtoN job template
+# IOR MPI filesystem test using posix
+# small total file size keeps this a sanity test as opposed to a stress test
 # N to N file access pattern
 # NOTE: bash syntax is used here
 
