--- a/cbench/templates/latency_com.in
+++ b/cbench/templates/latency_com.in
@@ -1,4 +1,4 @@
-# bandwidth_com job template
+# latency_com job template
 # NOTE: bash syntax is used here
 
 # com does not like odd numbers of processes, so don't
@@ -9,6 +9,6 @@ if [ "$ODD" == "1" ]; then
 	exit
 fi
 
-CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/com -o 100 -l -w Unidirectional,UnidirAsync,Bidirectional,BidirAsync -b 8"
+CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/com -o 100 -l -w Latency -b 8"
 
 cbench_run_cmd $CMD
