Get rid of "make[1]: *** No rule to make target `distclean'.  Stop." errors by making distclean targets where none existed.  All of the distclean targets just point to their clean target for now.

--- a/cbench/opensource/HPLlinpack/Makefile
+++ b/cbench/opensource/HPLlinpack/Makefile
@@ -47,11 +47,13 @@ linpack: xerbla
 local: linpack
 	/bin/mv -f hpl/bin/cbench/xhpl hpl/bin/cbench/xhpl.ch_shmem
 
-clean distclean:
+clean:
 	/bin/rm -f linpack-size	
 	$(MAKE) -C hpl make.def
 	$(MAKE) -C hpl clean_arch_all
 	/bin/rm -rf hpl/lib hpl/bin
+
+distclean: clean
 
 install uninstall:
 	$(do-$@)
