--- a/opensource/bonnie++/Makefile
+++ b/opensource/bonnie++/Makefile
@@ -1,23 +1,33 @@
+# Makefile for bonnie++ for Cbench
+
 include ../../make.def
 
-SUBDIRS = ./bonnie++-1.03d
+SRC=bonnie++-1.03d
+TAR=$(SRC).tgz
+URL=http://www.coker.com.au/bonnie++/$(TAR)
 
-EXECS = $(SUBDIRS)/bonnie++
+EXECS = $(SRC)/bonnie++
 
 INSTALLDIR = $(bin_dir)
 INSTALLTARGETS = $(EXECS)
 
-default: $(EXECS)
+default: $(SRC)
+	cd src/; export CC=$(CC); export F77=$(F77); export MPILIB=$(MPICH)/lib; if [ ! -f config.status ]; then ./configure; fi; make
 
-$(SUBDIRS)/bonnie++: untar
-	cd $(SUBDIRS); export CC=$(CC); export F77=$(F77); export MPILIB=$(MPICH)/lib; if [ ! -f config.status ]; then ./configure; fi; make
-
-untar:
+$(SRC) src: $(TAR)
 	if [ ! -d bonnie++-1.03d ]; then tar -zxvf bonnie++-1.03d.tgz; fi
+	ln -sf $(SRC) src
+	touch $(SRC)
+
+$(TAR) download:
+	$(call download-url,$(URL))
+	-[ -e $(TAR) ] && touch $(TAR)
+
 clean:
-	cd $(SUBDIRS); make realclean
+	-cd $(SRC); make realclean
 
 distclean: clean
+	-/bin/rm -rf $(SRC) $(TAR) src
 
 install uninstall:
 	$(do-$@)
