--- a/templates/lammps_rhodolong.scaled.in
+++ b/templates/lammps_rhodolong.scaled.in
@@ -1,18 +1,30 @@
 # lammps_rhodolong.scaled job template
 # Uses LAMMPS benchmark code Rhodopsin
 #
+# Cbench_walltime: 48:00:00
+#
 # The goal of this job is to run 24-96 hours, write restart files,
 # and restart from a set of restart files at least once.
 #
 # NOTE: bash syntax is used here
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/lmp_cbench SCALING_PARAMS_HERE"
-STDIN_FILE="$CBENCHTEST/lammps/bench/in.rhodolong.scaled"
 
 # use cbench_runin_tempdir() to run ourselves in a unique isolated directory
 cbench_runin_tempdir
 # symlink files into our isolated working directory
 ln -s ../data.rhodolong
 
+# run LAMMPS from timestep 0 
+cbench_echo "======= LAMMPS base run ======="
+STDIN_FILE="$CBENCHTEST/lammps/bench/in.rhodolong.scaled"
+cbench_run_cmd $CMD
+
+# LAMMPS will exit based on the timesteps in the in.rhodolong.scaled input
+# deck. Wait just a bit and then attempt a restart.
+sleep 30
+
+cbench_echo "======= LAMMPS restart run ======="
+STDIN_FILE="$CBENCHTEST/lammps/bench/in.rhodolong.scaled.restart"
 cbench_run_cmd $CMD
 
