added a patch to build a test_mesh_big.exe which will run for more timesteps than the standard 121. currently set to 1000 steps

--- a/openapps/phdmesh/Makefile
+++ b/openapps/phdmesh/Makefile
@@ -6,7 +6,7 @@ SRC=phdMesh
 TAR=$(SRC).tar.gz
 URL=https://software.sandia.gov/mantevo/downloads/$(TAR)
 
-EXECS = $(SRC)/build_cbench/test_mesh.exe
+EXECS = $(SRC)/build_cbench/test_mesh.exe $(SRC)/build_cbench/test_mesh_big.exe
 INSTALLDIR = $(bin_dir)
 INSTALLTARGETS = $(EXECS)
 
@@ -19,11 +19,12 @@ all normal: $(SRC)
 #	$(MAKE) CXX=$(CXX) LDCXX=$(CXX) PHDMESH_PATH=$(PHDMESH_PATH) CFLAGS_INC="-I$(PHDMESH_PATH) -I$(PHDMESH_PATH)/include" -C $(SRC)/build_cbench -f ../Make.in all
 
 $(SRC): $(TAR)
-	[ ! -d $(SRC) ] && mkdir $(SRC)
+	-[ ! -d $(SRC) ] && mkdir $(SRC)
 	cd $(SRC); tar zxf ../$(TAR)
 	/bin/ln -sf $(SRC) src
 	[ ! -d $(SRC)/build_cbench ] && mkdir $(SRC)/build_cbench
 	cd $(SRC)/build_cbench && /bin/ln -sf ../../build.cbench build.cbench
+	patch -p0 < test_mesh_big.patch
 
 $(TAR) download:
 	$(call download-url,$(URL))
