Add check for existence and executability for all Cbench job templates by cbench_functions.
If the specified binary isn't found or isn't executable, a CBENCH NOTICE is given so the output parser handles it correctly.

--- a/cbench/templates/amg_amg.in
+++ b/cbench/templates/amg_amg.in
@@ -9,6 +9,10 @@
 # symlink the input files
 #ln -s TESTSET_PATH_HERE//pg.input pg-input-data
 #cbench_echo "Cbench job tempdir: $PWD"
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/amg2006
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/amg2006
 
 PX=PX_HERE
 PY=PY_HERE
