--- a/cbench/templates/trilinos_epetratest.in
+++ b/cbench/templates/trilinos_epetratest.in
@@ -1,4 +1,8 @@
 # Trilinos Epetra test
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/trilinos_epetratest
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/trilinos_epetratest
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/trilinos_epetratest 700 700 NUMPROCS_X_HERE NUMPROCS_Y_HERE -m -h"
 
