--- a/cbench/templates/collective_imb.in
+++ b/cbench/templates/collective_imb.in
@@ -1,6 +1,11 @@
 # collective_imb job template
 # Intel MPI Benchmarks for some choice collective ops
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/IMB-MPI1
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/IMB-MPI1
+
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/IMB-MPI1 -npmin NUM_PROCS_HERE allreduce reduce_scatter bcast barrier"
 
