--- a/cbench/templates/collective_mpibenchbcast.in
+++ b/cbench/templates/collective_mpibenchbcast.in
@@ -2,6 +2,10 @@
 # LLNL mpiBench_Bcast benchmark
 # using the all-to-all nonblocking pattern
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/mpiBench_Bcast
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/mpiBench_Bcast
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/mpiBench_Bcast -c"
 
