--- a/cbench/templates/hpcc_hpcc.in
+++ b/cbench/templates/hpcc_hpcc.in
@@ -1,8 +1,12 @@
 # HPCC job template
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/hpcc
 
 cbench_echo "Cbench memory_util_factors: MEM_UTIL_FACTORS_HERE"
 cbench_echo
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/hpcc
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/HPCC_BIN_HERE"
 
