--- a/cbench/templates/hpccg_25cubed.in
+++ b/cbench/templates/hpccg_25cubed.in
@@ -1,4 +1,8 @@
 # HPCCG 25x25x25 template
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/test_HPCCG
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/test_HPCCG
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/test_HPCCG 25 25 25"
 
