--- a/cbench/templates/hpccg_50cubed.in
+++ b/cbench/templates/hpccg_50cubed.in
@@ -1,4 +1,8 @@
 # HPCCG 50x50x50 template
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/test_HPCCG
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/test_HPCCG
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/test_HPCCG 50 50 50"
 
