--- a/cbench/templates/lammps_rhodo.in
+++ b/cbench/templates/lammps_rhodo.in
@@ -1,6 +1,11 @@
 # lammps_rhodo job template
 # Uses LAMMPS benchmark code Rhodopsin
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/lmp_cbench
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/lmp_cbench
+
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/lmp_cbench"
 STDIN_FILE="$CBENCHTEST/lammps/bench/in.rhodo"
