--- a/cbench/templates/lammps_rhodo.scaled.in
+++ b/cbench/templates/lammps_rhodo.scaled.in
@@ -1,6 +1,10 @@
 # lammps_rhodo.scaled job template
 # Uses LAMMPS benchmark code Rhodopsin
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/lmp_cbench
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/lmp_cbench
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/lmp_cbench SCALING_PARAMS_HERE"
 STDIN_FILE="$CBENCHTEST/lammps/bench/in.rhodo.scaled"
