--- a/cbench/templates/longstress_stress.in
+++ b/cbench/templates/longstress_stress.in
@@ -2,6 +2,10 @@
 # 'stress' MPI benchmark from the MPICH perftest code
 # using the all-to-all nonblocking pattern for approximately 8 hours 
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/stress
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/stress
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/stress -async -all -quiet -ttime 08:00"
 
