--- a/cbench/templates/mpioverhead_ohead.in
+++ b/cbench/templates/mpioverhead_ohead.in
@@ -1,5 +1,9 @@
 # mpioverhead job template
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/mpi_overhead
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/mpi_overhead
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/mpi_overhead"
 
