--- a/cbench/templates/rotate_rotate.in
+++ b/cbench/templates/rotate_rotate.in
@@ -1,5 +1,9 @@
 # rotate job template
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/rotate
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/rotate
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/rotate"
 
